--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "pg-diff-cli",
+    "name": "pg-diff-cli-pepe",
     "version": "1.2.12",
     "description": "PostgreSQL schema and data comparing tool",
-    "pgver": "9.6+",
+    "pgver": "11+",
     "main": "main.js",
     "preferGlobal": true,
     "homepage": "https://michaelsogos.github.io/pg-diff/",
